3M updates